fix footer styles on mobile - #14

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -19,3 +19,9 @@
 .footer img:hover {
   transform: scale(1.2) rotate(-5deg);
 }
+
+@media (width < 700px) {
+  .footer {
+    position: inherit;
+  }
+}
